# TRIGGER_TESTING

./: .cproject  CMakeLists.txt  TRIGGER_TEST.ioc
Core/Inc/: main.h
Core/Src/: main.c  stm32g4xx_hal_msp.c
Drivers/CMSIS/Device/ST/STM32G4xx/Include/: stm32g4xx.h
cmake/: IncludeList.cmake  SourceList.cmake  gcc-arm-none-eabi.cmake
